Next release
============

Documentation
-------------

- Refactoring and documentation of the ``getChainFor`` method of the 
  ``GroupSpaceWorkflowPolicyDefinition`` in ``policy.py``. 

Bug Fixes
---------

- Raise an error at installation time if ``CMFPlacefulWorkflow`` has not been 
  installed before

1.0.1 (2009-11-11)
==================

Backwards Incompatibilities
---------------------------

- Renamed ``GroupSpaceWorkflowPolicy.py`` to ``policy.py``. To upgrade, go to
  the ``portal_placeful_workflow`` tool in the ZMI and remove the two policies,
  ``groupspace_content_placeful_workflow`` and ``groupspace_placeful_workflow``.
  Then reinstall ``collective.groupspace.workflow``.

1.0 (2009-10-28)
================

- Initial release.
