@@ -2,7 +2,7 @@ from zope.testing import doctest
 from unittest import TestSuite
 from utils import optionflags
 from Testing.ZopeTestCase import FunctionalDocFileSuite
-from base import WorkflowFunctionalTestCase
+from base import FunctionalTestCase
 
 def test_suite():
     tests = ['placefulworkflowpolicy.txt',]
@@ -11,5 +11,5 @@ def test_suite():
         suite.addTest(FunctionalDocFileSuite(test,
             optionflags=optionflags,
             package="collective.groupspace.workflow.tests",
-            test_class=WorkflowFunctionalTestCase))
+            test_class=FunctionalTestCase))
     return suite
